@@ -355,12 +355,6 @@ exec_task(slurmd_job_t *job, int i, int waitfd)
 	}
 #endif
 
-	if (set_user_limits(job) < 0) {
-		debug("Unable to set user limits");
-		log_fini();
-		exit(5);
-	}
-
 	if (i == 0)
 		_make_tmpdir(job);
 
@@ -484,6 +478,15 @@ exec_task(slurmd_job_t *job, int i, int waitfd)
 		error("No executable program specified for this task");
 		exit(2);
 	}
+	/* Do this last so you don't worry too much about the users
+	   limits including the slurmstepd in with it.
+	*/
+	if (set_user_limits(job) < 0) {
+		debug("Unable to set user limits");
+		log_fini();
+		exit(5);
+	}
+
 	execve(task->argv[0], task->argv, job->env);
 
 	/*
